--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -589,6 +589,115 @@ header{
       
     }
 }
+#contact{
+  
+    padding: 40px 30px;
+    background: darken(grey,  40);
+    .alert{
+     text-align: center;
+     padding:10px;
+     background:#79c879;
+     color:#fff;
+     margin:10px;
+    opacity: 0;
+    transition: 0.6s ease-in-out;
+   }
+     .con{
+         width: 125px;
+         margin: auto;
+         text-align: center;
+         font-size: 40px;
+         color: white;
+         font-weight: bold;
+         padding-bottom:12px;
+         border-bottom: 6px solid $mainClor;
+         margin-bottom: 20px;
+        
+     }
+    
+     .contact-form{
+         box-shadow: 0 0 20px 0 darken(grey, 30);
+         width: 80%;
+         margin: auto;
+         display: grid;
+         grid-template-columns: 30% 70%;
+        
+         
+      
+        .info{
+            background:grey;
+            padding: 1em;
+            h1{
+                span{
+                    color: darken($mainClor, 30);
+                }
+            }
+            ul{
+                list-style: none;
+                padding: 0;
+                margin: 0;
+                li{
+                    font-size: 18px;
+                   padding: 5px;
+                    margin: 0;
+                   
+                    .fa{
+                        margin-right: 5px;
+                        color: darken($mainClor, 30);
+                    }
+                    
+                }
+            }
+        }
+        .Form{
+         background: white;
+        
+         h1{
+             font-size: 32px;
+             text-align: center;
+         }
+             
+         
+         #contactForm{
+             
+             padding: 1em;
+             display: grid;
+             grid-template-columns:repeat(2,1fr);
+             grid-gap: 10px;
+            label{
+                display: block;
+                margin-bottom: 5px;
+                color: darken($mainClor, 30);
+            }
+            input{
+                width: 96%;
+                padding: 0.5em;
+            }
+            .full{
+               
+                grid-column: 1/3;
+            }
+            textarea,button{
+                width: 100%;
+                border: 1 solid $mainClor;
+            }
+            button{
+                background: $mainClor;
+                color: white;
+                font-size: 18px;
+                padding: 10px;
+                cursor: pointer;
+                border: none;
+                transition: 0.8s ease-in-out;
+            }
+            button:hover{
+                background: darken($mainClor, 10)
+            }
+         }
+        }
+       
+     }
+ }
 footer{
     text-align: center;
     background: grey;
